# TipTune

./: .gitignore  README.md  TipTune.spec  app.py  config.ini.example  index.html  package-lock.json  package.json  requirements.txt
.github/workflows/: build.yml  ci.yml  publish-to-auto-release.yml  release-from-tag.yml  release.yml
chatdj/: __init__.py  chatdj.py
docs/: QUICK_START.md  USER_MANUAL.md
handlers/: __init__.py  obshandler.py
helpers/: __init__.py  actions.py  checks.py
scripts/: bump-minor.mjs  fetch-binaries.mjs  prepare-sidecar.mjs
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
utils/: runtime_paths.py  structured_logging.py
webui/: index.html  package-lock.json  package.json  vite.config.ts
webui/pages/: dashboard.html  events.html  settings.html  setup.html
webui/src/: App.tsx  api.ts  app.css  main.tsx  types.ts
webui/src/components/: HeaderBar.tsx  PlaybackContext.tsx  QueueCard.tsx
webui/src/pages/: DashboardPage.tsx  EventsPage.tsx  HelpPage.tsx  HistoryPage.tsx  SettingsPage.tsx  SetupPage.tsx  StatsPage.tsx
webui/static/: app.css  dashboard.js  events.js  settings.js  setup.js
